# rp2040-pio-emulator

./: .gitignore  CHANGELOG.md  Next Actions.asciidoc  README.md  README.rst  pyproject.toml  square_wave_example.ipynb
.github/: make-badges.mjs  make_badges.py
.github/workflows/: package-ci.yml
docs/: FAQ.md  Quick Start Guide.md  Tour of pioemu.md  Troubleshooting.md
examples/: fifo_loopback.py
examples/jupyter-notebook/: README.md  requirements.txt  square_wave_example.ipynb
examples/pimoroni-blinkt-unit-test/: README.md  blinkt_example.pio  requirements.txt  test_blinkt_example.py
pioemu/: __init__.py  bit_operations.py  conditions.py  disassembly.py  emulation.py  instruction.py  instruction_decoder.py  primitive_operations.py  shift_register.py  shifter.py  state.py
pioemu/decoding/: instruction_decoder.py
pioemu/instructions/: __init__.py  common.py  jmp.py  mov.py  out.py  pull.py  push.py  set.py  wait.py
tests/: __init__.py  opcodes.py  support.py  test_bit_operations.py  test_disassembly.py  test_emulation.py  test_jmp_instruction.py  test_mov_instruction.py  test_nop_instruction.py  test_out_instruction.py  test_primitive_operations.py  test_program_wrapping.py  test_pull_instruction.py  test_set_instruction.py  test_shifter.py  test_side_set.py  test_wait_instruction.py
tests/decoding/: __init__.py  test_instruction_decoder.py
tests/features/: test_auto_pull.py  test_auto_push.py  test_delay.py  test_input_source.py  test_program_counter.py  test_program_wrapping.py  test_shift_register.py  test_side_set.py  test_stop_conditions.py
tests/instructions/: test_in.py  test_irq.py  test_jmp.py  test_mov.py  test_out.py  test_pull.py  test_push.py  test_set.py  test_wait.py
