[project]
name = "rp2040-pio-emulator"
version = "0.85.0"
description = "RP2040 emulator for the testing and debugging of PIO programs"
authors = [
    {name = "Nathan Young"}
]
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "rp2040",
    "rp2",
    "raspberry-pi-pico",
    "testing",
    "tdd",
    "debugging",
]
requires-python = ">=3.10.18"
dependencies = [
]

[dependency-groups]
dev = [
    "pylint (==3.3.8)",
    "pytest (==8.4.2)",
    "coverage (==7.10.7)",
    "black (==25.9.0)",
    "isort (==6.0.1)",
    "mypy (==1.18.2)",
]

[tool.poetry]
packages = [{include = "pioemu"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
