[project]
name = "rp2040-pio-emulator"
version = "0.87.0"
description = "RP2040 emulator for the testing and debugging of PIO programs"
authors = [
    {name = "Nathan Young"}
]
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "rp2040",
    "rp2",
    "raspberry-pi-pico",
    "testing",
    "tdd",
    "debugging",
]
requires-python = ">=3.10.18"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
]

[dependency-groups]
dev = [
    "pylint (==4.0.2)",
    "pytest (==8.4.2)",
    "coverage (==7.11.0)",
    "black (==25.9.0)",
    "isort (==7.0.0)",
    "mypy (==1.18.2)",
]

[tool.poetry]
packages = [{include = "pioemu"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
