[project]
name = "rp2040-pio-emulator"
version = "0.88.0"
description = "RP2040 emulator for the testing and debugging of PIO programs"
authors = [
    {name = "Nathan Young"}
]
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "rp2040",
    "rp2",
    "raspberry-pi-pico",
    "testing",
    "tdd",
    "debugging",
]
requires-python = ">=3.10.18"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
]

[dependency-groups]
dev = [
    "pylint (==4.0.5)",
    "pytest (==9.0.2)",
    "coverage (==7.13.4)",
    "black (==26.3.0)",
    "isort (==8.0.1)",
    "mypy (==1.19.1)",
]

[tool.poetry]
packages = [{include = "pioemu"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
